bugfix: blur shadow in dark mode is too light in docsearch chat

--- a/clients/search-component/src/TrieveModal/index.css
+++ b/clients/search-component/src/TrieveModal/index.css
@@ -1011,6 +1011,10 @@ body {
         @apply tv-text-zinc-400;
       }
 
+      .tv-dark-from-neutral-700 {
+        @apply tv-from-neutral-700;
+      }
+
       .message-wrapper {
         border-color: var(--tv-zinc-600);
       }
